--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@tanstack/vue-query": "^5.51.21",
         "axios": "^1.7.3",
+        "chart.js": "^4.4.8",
         "date-fns": "^4.1.0",
         "emailjs-com": "^3.2.0",
         "http-proxy-middleware": "^3.0.0",
